--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
         <!-- HEADER -->
         <header>
-            <img src="/images/logo/Booki.png" alt="logo booki">
+            <div class="logo">
+                <img src="/images/logo/Booki.png" alt="logo booki">
+            </div>
 
             <!-- NAVIGATION -->
             <nav>
@@ -75,6 +77,10 @@
                         <article>
                             <div class="hostCard">
                                 <div class="host-image">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
                                         alt="Auberge la Cannebière">
                                     <div class="host-text">
@@ -95,6 +101,10 @@
                         <article>
                             <div class="hostCard">
                                 <div class="host-image">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
                                         alt="Hôtel du port">
                                     <div class="host-text">
@@ -115,6 +125,10 @@
                         <article>
                             <div class="hostCard">
                                 <div class="host-image">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/hebergements/3_medium/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg"
                                         alt="Hôtel Les mouettes">
                                     <div class="host-text">
@@ -135,6 +149,10 @@
                         <article>
                             <div class="hostCard">
                                 <div class="host-image">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/hebergements/3_medium/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
                                         alt="Hôtel de la mer">
                                     <div class="host-text">
@@ -155,6 +173,10 @@
                         <article>
                             <div class="hostCard">
                                 <div class="host-image">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/hebergements/3_medium/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
                                         alt="Hôtel Le Panier">
                                     <div class="host-text">
@@ -175,6 +197,10 @@
                         <article>
                             <div class="hostCard">
                                 <div class="host-image">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/hebergements/3_medium/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
                                         alt="Hôtel chez Amina">
                                     <div class="host-text">
@@ -204,6 +230,10 @@
                         <article>
                             <div class="popular-card">
                                 <div class="popular-image">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                                         alt="Hôtel Le soleil du matin">
                                     <div class="popular-text">
@@ -226,6 +256,10 @@
                         <article>
                             <div class="popular-card">
                                 <div class="popular-image">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/aw-creative-VGs8z60yT2c-unsplash.jpg"
                                         alt="Au coeur de l'eau Chambres d'hôtes">
                                     <div class="popular-text">
@@ -248,6 +282,10 @@
                         <article>
                             <div class="popular-card">
                                 <div class="popular-image">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
                                     <img src="/images/hebergements/2_large/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
                                         alt="Hôtel Tout bleu et Blanc">
                                     <div class="popular-text">
@@ -277,6 +315,10 @@
                     <div class="container-activity-cards">
                         <article>
                             <div class="activity-image">
+                                <source media="(max-width: 992px)"
+                                    srcset="/images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+                                <source media="(min-width: 768px)"
+                                    srcset="/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
                                 <img src="/images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                                     alt="Vieux Port">
                             </div>
@@ -286,6 +328,10 @@
                         <div class="container-double">
                             <article>
                                 <div class="activity-image-moy">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
                                     <img class="large"
                                         src="/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                                         alt="Fort de Pomègues">
@@ -296,6 +342,10 @@
 
                             <article>
                                 <div class="activity-image-moy">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg">
                                     <img class="small"
                                         src="/images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
                                         alt="Îles du Frioul">
@@ -307,6 +357,10 @@
 
                         <article>
                             <div class="activity-image">
+                                <source media="(max-width: 992px)"
+                                    srcset="/images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+                                <source media="(min-width: 768px)"
+                                    srcset="/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
                                 <img src="/images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                                     alt="Parc National des Calanques">
                             </div>
@@ -314,9 +368,13 @@
                             <h4>Parc National des Calanques</h4>
                         </article>
 
-                        <div class="container-double container-double">
+                        <div class="container-double">
                             <article>
                                 <div class="activity-image-moy">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
                                     <img class="normal"
                                         src="/images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg"
                                         alt="Notre Dame de la Garde">
@@ -327,6 +385,10 @@
 
                             <article>
                                 <div class="activity-image-moy">
+                                    <source media="(max-width: 992px)"
+                                        srcset="/images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
+                                    <source media="(min-width: 768px)"
+                                        srcset="/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg">
                                     <img class="normal"
                                         src="/images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                                         alt="Parc Longchamp">
